# zszc-sql-client

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml  desktop-package.yml  plugins-package.yml
backend/: README.md
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: app_state.rs  commands.rs  compare_service.rs  compare_task_manager.rs  data_export.rs  local_store.rs  main.rs  models.rs  mysql_service.rs  navicat.rs  plugin_host.rs  redis_service.rs  runtime_metrics.rs  sql_console.rs  structure_compare_service.rs  table_data.rs
desktop/src-tauri/src/compare_core/: errors.rs  mod.rs
desktop/src-tauri/src/compare_core/models/: api.rs  desktop.rs  mod.rs
desktop/src-tauri/src/compare_core/services/: compare_service.rs  diff_cache_service.rs  mod.rs  mysql_service.rs  structure_compare_service.rs
desktop/src-tauri/src/compare_core/utils/: mod.rs  sql_builder.rs  value.rs
desktop/src-tauri/src/data_transfer/: mod.rs  models.rs  service.rs
docs/: README.md  compare-integration.md  data-transfer-workspace.md  desktop-architecture.md  feature-gap-analysis.md  github-build.md  plugin-development.md  plugin-workspace-design.md  prototype-mapping.md  rectification-checklist.md  refactor-optimization-plan-v2.md  refactor-optimization-plan.md  reference-benchmark.md  sql-autocomplete-research.md  windows-cross-build.md
docs/plugins/: README.md  dingtalk-contact-change-plugin.md  mock-id-generator-plugin.md  password-util-plugin.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  LazySqlEditor.tsx  SqlEditor.tsx  api.ts  index.css  mockData.ts  monaco-shims.d.ts  types.ts
frontend/src/features/compare/: CompareConnectionForm.tsx  CompareHistoryWorkspace.tsx  CompareResultViews.tsx  DataCompareWorkspace.tsx  StructureCompareWorkspace.tsx  state.ts  taskRuntime.ts  types.ts
frontend/src/features/data-transfer/: DataTransferWorkspace.tsx  dataTransfer.css  mockApi.ts  types.ts
frontend/src/features/datasource/: views.tsx
frontend/src/features/plugins/: PluginManagerModal.tsx  PluginWorkspace.tsx
frontend/src/features/redis/: RedisWorkspace.tsx
frontend/src/features/sql-console/: ConsoleView.tsx
frontend/src/features/table-data/: DataEditorView.tsx  DataGridTable.tsx  dataMutations.ts
frontend/src/features/table-design/: DesignEditorView.tsx  schema.ts
frontend/src/features/workspace/: AppOverlays.tsx  AppWindowBar.tsx  DatabaseNavigationPane.tsx  WorkspaceDatasourceTabs.tsx  (+11 more)
plugins/dingtalk-contact-change-plugin/: README.md  package-lock.json  package-plugin.mjs  package.json
plugins/dingtalk-contact-change-plugin/backend/: Cargo.toml
plugins/dingtalk-contact-change-plugin/backend/src/: dingtalk.rs  error.rs  main.rs  models.rs  service.rs  storage.rs
plugins/dingtalk-contact-change-plugin/frontend/: index.html  package-lock.json  package.json
plugins/mock-id-generator-plugin/: README.md  package-lock.json  package-plugin.mjs  package.json
plugins/mock-id-generator-plugin/backend/: Cargo.toml
plugins/mock-id-generator-plugin/frontend/: index.html  package-lock.json  package.json
plugins/password-util-plugin/: README.md  package-lock.json  package-plugin.mjs  package.json
plugins/password-util-plugin/backend/: Cargo.toml
plugins/password-util-plugin/frontend/: index.html  package-lock.json  package.json  tsconfig.json
plugins/shared/: package-plugin-lib.mjs
scripts/: ensure-frontend-build.mjs  package-plugins.mjs
(+19 files in other folders)
