[package]
name = "zszc-sql-client-desktop"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
aes = "0.8"
actix-web = { version = "4.11.0", default-features = false, features = ["macros"] }
anyhow = "1"
arboard = "3"
async-stream = "0.3"
blowfish = "0.9"
cbc = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
futures = "0.3"
hex = "0.4"
if-addrs = "0.13"
mime_guess = "2"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls", "minimal"] }
redis = "1.2.0"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rfd = "0.15"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
socket2 = "0.5"
sysinfo = "0.38.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
thiserror = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
